# ice-n-tea-search-engine

./: .gitignore  CMakeLists.txt  README.md
include/: converterJSON.h  invertedIndex.h  searchServer.h
release/: answers.json  config.json  requests.json
release/text_files/: file001.txt  file002.txt  file003.txt
src/: CMakeLists.txt  converterJSON.cpp  converterJSON_1.cpp  converterJSON_2.cpp  converterJSON_3.cpp  invertedIndex.cpp  main.cpp  searchServer.cpp
test/: CMakeLists.txt  projectTests.cpp
tests/: CMakeLists.txt
tests/indxTests/: CMakeLists.txt  indxTests.cpp  test_text_file_3.0.txt
tests/srchSrvTests/: CMakeLists.txt  srchSrvTests.cpp
